bdr.BDR2.scala.error
Erreur de compilation :
BDR2:2: error: not found: value lisMessage
  lisMessage() match{
  ^